--- a/requirements.txt
+++ b/requirements.txt
@@ -1,199 +1,4 @@
-absl-py==2.1.0
-aiofiles==22.1.0
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiosignal==1.2.0
-aiosqlite==0.18.0
-altair==5.4.1
-anyio==4.2.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-astunparse==1.6.3
-async-timeout==4.0.3
-attrs==23.1.0
-Babel==2.11.0
-beautifulsoup4==4.12.3
-bleach==4.1.0
-blinker==1.6.2
-Brotli==1.0.9
-cachetools==5.3.3
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.1
-contourpy==1.3.0
-cryptography==41.0.3
-cycler==0.12.1
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-dlib==19.24.6
-entrypoints==0.4
-exceptiongroup==1.2.0
-executing==0.8.3
-face-recognition==1.3.0
-face-recognition-models==0.3.0
-fastjsonschema==2.16.2
-filelock==3.16.1
-flatbuffers==24.3.25
-fonttools==4.54.1
-frozenlist==1.4.0
-fsspec==2024.9.0
-gast==0.4.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-auth==2.29.0
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-grpcio==1.48.2
-h5py==3.11.0
-huggingface-hub==0.25.2
-idna==3.7
-imbalanced-learn==0.12.4
-imblearn==0.0
-ipykernel==6.28.0
-ipython==8.27.0
-ipython-genutils==0.2.0
-ipywidgets==8.1.2
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-json5==0.9.6
-jsonschema==4.19.2
-jsonschema-specifications==2023.7.1
-jupyter==1.0.0
-jupyter_client==7.4.9
-jupyter-console==6.6.3
-jupyter_core==5.7.2
-jupyter-events==0.10.0
-jupyter_server==2.14.1
-jupyter_server_fileid==0.9.0
-jupyter_server_terminals==0.4.4
-jupyter_server_ydoc==0.8.0
-jupyter-ydoc==0.2.5
-jupyterlab==3.6.8
-jupyterlab-pygments==0.2.2
-jupyterlab_server==2.27.3
-jupyterlab-widgets==3.0.10
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.7
-lz4==4.3.3
-Markdown==3.4.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.9.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==2.0.4
-mkl_fft==1.3.10
-mkl_random==1.2.7
-mkl-service==2.4.0
-mtcnn==1.0.0
-multidict==6.0.4
-narwhals==1.9.4
-nb-conda-kernels==2.3.1
-nbclassic==1.1.0
-nbclient==0.8.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook==6.5.7
-notebook_shim==0.2.3
-numpy==1.26.4
-oauthlib==3.2.2
-opencv-contrib-python==4.10.0.84
-opt-einsum==3.3.0
-overrides==7.4.0
-packaging==24.1
-pandas==2.2.3
-pandocfilters==1.5.0
-parso==0.8.3
-pillow==10.4.0
-pip==24.2
-platformdirs==3.10.0
-ply==3.11
-prometheus-client==0.14.1
-prompt-toolkit==3.0.43
-protobuf==3.20.3
-psutil==5.9.0
-pure-eval==0.2.2
-pyarrow==17.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pydeck==0.9.1
-Pygments==2.15.1
-PyJWT==2.8.0
-pyOpenSSL==23.2.0
-pyparsing==3.1.4
-PyQt5==5.15.10
-PyQt5-sip==12.13.0
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-pytz==2024.1
-pywin32==305.1
-pywinpty==2.0.10
-PyYAML==6.0.1
-pyzmq==24.0.1
-qtconsole==5.6.0
-QtPy==2.4.1
-referencing==0.30.2
-regex==2024.9.11
-requests==2.32.3
-requests-oauthlib==2.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.9.2
-rpds-py==0.10.6
-rsa==4.7.2
-safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.13.1
-seaborn==0.13.2
-Send2Trash==1.8.2
-sentencepiece==0.2.0
-setuptools==75.1.0
-sip==6.7.12
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.5
-stack-data==0.2.0
-streamlit==1.39.0
-tenacity==9.0.0
-tensorboard==2.10.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
 tensorflow==2.10.0
-tensorflow-estimator==2.10.0
-termcolor==2.1.0
-terminado==0.17.1
-threadpoolctl==3.5.0
-tinycss2==1.2.1
-tokenizers==0.20.1
-toml==0.10.2
-tomli==2.0.1
-tornado==6.4.1
-tqdm==4.66.5
-traitlets==5.14.3
-transformers==4.45.2
-typing_extensions==4.11.0
-tzdata==2024.2
-urllib3==2.2.3
-watchdog==5.0.3
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.8.0
-Werkzeug==3.0.3
-wheel==0.44.0
-widgetsnbextension==4.0.10
-win-inet-pton==1.1.0
-wrapt==1.14.1
-y-py==0.6.2
-yarl==1.11.0
-ypy-websocket==0.8.4
+numpy==1.26.4
+opencv-python==4.10.0.84
+mtcnn==1.0.0
