--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 streamlit
-opencv-python-headless
+opencv-python-headless==4.5.2.52
 tensorflow
 mtcnn
-Pillow
-matplotlib
+Pillow==8.3.2
+matplotlib==3.3.4
+torch==1.9.1
+requests==2.25.1
+facenet_pytorch==2.5.2
+numpy==1.18.2
