--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-streamlit
-opencv-python-headless==4.10.0.84
-tensorflow
-mtcnn
-Pillow==8.3.2
-matplotlib==3.3.4
-torch==2.5.1
-requests==2.25.1
-facenet_pytorch==2.5.2
-numpy>=1.19.3
+streamlit==1.25.0
+opencv-python==4.8.1.78
+Pillow==10.0.0
+tensorflow==2.13.0
+mtcnn==0.1.0
+numpy==1.24.4
